# zugli

./: .gitattributes  .gitignore  ASSEMBLY_AND_FLASHING.md  FEATURE_UI_BUILDER.md  PROJECT_BRIEF.md  README.md  VERIFY.md  test-endpoints.sh  test-m2-layout.sh  test-m3-preview.sh  zuegli_project_brief.md  zugli_project_brief.md
.github/workflows/: deploy-pages.yml
designs/: zugli_setup_page.html
firmware/: Cargo.toml  REFACTORING.md  build.rs
firmware/src/: display.rs  httpd.rs  lib.rs  localtime.rs  mdns.rs  model.rs  poll.rs  portal.rs  shared.rs  sntp.rs  storage.rs  udp.rs  weather.rs  wifi.rs
firmware/src/display/: custom.rs  draw.rs  mod.rs  screens.rs
site/: index.html
web/: index.html  setup.html
